plang/testing/logs/false-incorrect/123/program123.p.p
uT :- bA (d), m60u (IIh) (Fzuq) fK tyWdU; lYpuv V36a (C) b5SpU; evYqB, aau0p, s3 HpC, (kK17 (Z)); (jRA eVI RqiL lZGb (mXpA LX (z K (a (Z))))); uvBfv r3Iqt Zfnq (jqCV (fZx)) FP, y087X (mX9S (cvAU lU qRqgY nZl3A T) tkb (x VW (amb0 no Tq3) uaFX) (yvnVV)) (nNkG), tv (QHiOD); (ePRMD (NSu) (Mf4Qh) (ZTEY) cMA), ((b (qzj9k) c), wDPDL (rr M (yTiW1 (Hd)) S) Jq (Uvge); w (IKE)).


m15P xa.

aQH Rkk.
q7 hhPt uqtNr (G75G) (Bw) :- ((bNb (QA) oC3PC wiWK), g (zgr0N); xngic, (vTtS NC5 XxaU9 j9ZE (jW p ByZrF)), gUj; raR39 Gp XCr6 p6A R), s5dI.
qq0G (g ealrH (H5y) FDbAk (Kj2hV)) (g1ba (ac JRn7J (m (uGa (rxdyc (cSIm (AiC0i) nIyQi (RR)) (wdXQ5) X0t2f) B)) yyr) (QG) (X) L).


eKGz (Rrf) (qL (Q9KeD) sChS (w gPOlI)) (ni (XtQ) Op).


rQmR j5 a5q (A) (y7U FWvwx WXt).

? (((mv1 (LlKx0) (aJ V) (I3PGC)))); ((tChzW XBu (QK), sh8Hi), ydYWX (GIT)).



